dev/ingress/fake36-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake36-ingress
  namespace: fake36-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake36.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake36-service
                port:
                  number: 20036
